--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ejercicio_mysql",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +11,17 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mysql2": "^2.3.3"
-  }
+    "mongoose": "^6.5.1",
+    "mysql2": "^2.3.3",
+    "mysql2-promise": "^0.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/antondelu/ejercicio_20_mysql.git"
+  },
+  "bugs": {
+    "url": "https://github.com/antondelu/ejercicio_20_mysql/issues"
+  },
+  "homepage": "https://github.com/antondelu/ejercicio_20_mysql#readme",
+  "description": ""
 }
